# animus-plugin-testkit

./: Cargo.toml  LICENSE  MATRIX-REPORT-2026-05-24-final.md  MATRIX-REPORT-2026-05-24.md  README.md
.github/workflows/: ci.yml  matrix.yml
crates/log-storage-conformance/: Cargo.toml
crates/log-storage-conformance/src/: lib.rs
crates/mock-cli-claude/: Cargo.toml
crates/mock-cli-claude/src/: main.rs
crates/mock-cli-codex/: Cargo.toml
crates/mock-cli-codex/src/: main.rs
crates/mock-cli-gemini/: Cargo.toml
crates/mock-cli-gemini/src/: main.rs
crates/mock-cli-oai/: Cargo.toml
crates/mock-cli-oai/src/: main.rs
crates/mock-cli-opencode/: Cargo.toml
crates/mock-cli-opencode/src/: main.rs
crates/plugin-bench/: Cargo.toml
crates/plugin-bench/benches/: provider_throughput.rs
crates/plugin-bench/src/: main.rs
crates/plugin-harness/: Cargo.toml
crates/plugin-harness/src/: lib.rs  main.rs  protocol.rs  report.rs  scenarios.rs  spawn.rs
crates/plugin-harness/tests/: cancellation.rs
crates/provider-conformance/: Cargo.toml
crates/provider-conformance/src/: lib.rs
crates/provider-conformance/tests/: baseline_parse.rs
crates/subject-conformance/: Cargo.toml
crates/subject-conformance/src/: lib.rs
crates/testkit-core/: Cargo.toml
crates/testkit-core/src/: lib.rs
crates/transport-conformance/: Cargo.toml
crates/transport-conformance/src/: lib.rs
crates/trigger-conformance/: Cargo.toml
crates/trigger-conformance/src/: lib.rs
docs/: architecture.md  ci-integration.md  writing-scenarios.md
fixtures/animus-plugin-smoke/: Cargo.toml
fixtures/animus-provider-mock/: Cargo.toml
fixtures/canonical-sse-streams/: README.md
fixtures/golden-notifications/: README.md
scenarios/: cancellation.yaml  error-recovery.yaml  resume-session.yaml  streaming-long.yaml  streaming-medium.yaml  streaming-short.yaml  tool-call-parallel-oai.yaml  tool-call-parallel.yaml  tool-call-single-oai.yaml  tool-call-single.yaml
