[package]
name = "mock-cli-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Mock `codex` CLI emitting canonical event output for plugin conformance tests."

[[bin]]
name = "mock-codex"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
