[package]
name = "mock-cli-gemini"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Mock `gemini` CLI emitting canonical partialResult/content output for plugin conformance tests."

[[bin]]
name = "mock-gemini"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
