[package]
name = "plugin-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Benchmark harness (TTFT, throughput, duration) for Animus provider plugins."

[[bin]]
name = "animus-plugin-bench"
path = "src/main.rs"

[dependencies]
testkit-core            = { path = "../testkit-core" }
animus-plugin-protocol  = { workspace = true }
animus-provider-protocol = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
clap       = { workspace = true }
colored    = { workspace = true }
chrono     = { workspace = true }

[dev-dependencies]
criterion  = { workspace = true }
serde_yaml = { workspace = true }

[[bench]]
name = "provider_throughput"
harness = false
