[package]
name = "testkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Shared types for the Animus plugin testkit (scenarios, results, reports)."

[lib]
path = "src/lib.rs"

[dependencies]
animus-provider-protocol = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono     = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
